--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.6.5",
+    "node-telegram-bot-api": "^0.59.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.0",
+    "@types/node-telegram-bot-api": "^0.57.5",
     "concurrently": "^7.4.0",
     "nodemon": "^2.0.20"
   }
