--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "set NODE_ENV=production && node build/index.js",
-    "dev": "set NODE_ENV=development && concurrently \"npx tsc --watch\" \"nodemon -q build/index.js\""
+    "start": "cross-env NODE_ENV=prod node build/index.js",
+    "dev": "cross-env NODE_ENV=dev nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -27,8 +27,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.6.5",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "node-telegram-bot-api": "^0.59.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/node": "^18.11.0",
     "@types/node-telegram-bot-api": "^0.57.5",
     "concurrently": "^7.4.0",
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.20"
   }
 }
