--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/aitagame/aita_tg_bot#readme",
   "dependencies": {
+    "@types/module-alias": "^2.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "module-alias": "^2.2.2",
     "mongoose": "^6.6.5",
     "mysql2": "^2.3.3",
     "node-telegram-bot-api": "^0.59.0",
