--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,15 @@
       "@templates/*": [
         "./templates/*"
       ],
+      "@sql/*": [
+        "./sql/*"
+      ],
+      "@bot/*": [
+        "./bot/*"
+      ],
+      "@src/*": [
+        "./*"
+      ],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
