--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,6 +48,9 @@
       "@src/*": [
         "./*"
       ],
+      "types/*": [
+        "./types/*"
+      ],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
