--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^6.6.5",
     "mysql2": "^2.3.3",
     "node-telegram-bot-api": "^0.59.0",
+    "redis": "^4.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
@@ -40,6 +41,7 @@
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.0",
     "@types/node-telegram-bot-api": "^0.57.5",
+    "@types/redis": "^4.0.11",
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.20"
