--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,6 +51,12 @@
       "types/*": [
         "./types/*"
       ],
+      "@data/*": [
+        "./data/*"
+      ],
+      "@config/*": [
+        "./config/*"
+      ],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
