Added full support of energy
TODO: create function to restore energy restore timers

--- a/src/data/game_config.json
+++ b/src/data/game_config.json
@@ -1,5 +1,5 @@
 {
-    "energy_reload_time": 300000,
+    "energy_reload_time": 3600000,
     "energy_default_energy": 5,
     "energy_default_max_energy": 5
 }
