--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-telegram-bot-api": "^0.59.0",
     "redis": "^4.3.1",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
